# rpm-metadata-parser

./: README.md  pyproject.toml
example/: example.py  ruby-3.3.1-7.fc40.x86_64.rpm
rpm_metadata_parser/: bytebuf.py  errors.py  header.py  lead.py  package.py  tags.py
